style.css
/* Set core root defaults */
:root {
    font-family: "Bai Jamjuree", Inter, system-ui, Avenir, Helvetica, Arial,
        sans-serif;
    font-weight: 500;

    color-scheme: light dark;
    background-color: rgb(255, 255, 255);
    color: hsla(201, 11%, 66%, 1);

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%; /* for iOS Safari */
    text-size-adjust: 100%; /* for other mobile browsers */
}

html,
body {
    overflow-x: hidden;
}
html:focus-within {
    scroll-behavior: smooth;
}
/* Set core body defaults */
body {
    min-height: 100vh;
    text-rendering: optimizeSpeed;
}

picture:not([xl\:absolute]) {
    display: grid;
    place-items: center;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

/* styles */

.bg-header {
    background-image: linear-gradient(
            to bottom,
            rgba(255, 255, 255, 0),
            80%,
            rgba(255, 255, 255, 0)
        ),
        url(/images/bg-header-mobile/150.webp);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
}

@media screen and (min-width: 256px) {
    .bg-header {
        background-image: linear-gradient(
                to bottom,
                rgba(255, 255, 255, 0),
                80%,
                rgba(255, 255, 255, 1)
            ),
            url(/images/bg-header-mobile/256.webp);
    }
}

@media screen and (min-width: 375px) {
    .bg-header {
        background-image: linear-gradient(
                to bottom,
                rgba(255, 255, 255, 0),
                80%,
                rgba(255, 255, 255, 1)
            ),
            url(/images/bg-header-mobile/375.webp);
    }
}

@media screen and (min-width: 768px) {
    .bg-header {
        background-image: linear-gradient(
                to bottom,
                rgba(255, 255, 255, 0),
                80%,
                rgba(255, 255, 255, 1)
            ),
            url(/images/bg-header-desktop/768.webp);
    }
}

@media screen and (min-width: 1024px) {
    .bg-header {
        background-image: linear-gradient(
                to bottom,
                rgba(255, 255, 255, 0),
                80%,
                rgba(255, 255, 255, 1)
            ),
            url(/images/bg-header-desktop/1024.webp);
    }
}

@media screen and (min-width: 1200px) {
    .bg-header {
        background-image: linear-gradient(
                to bottom,
                rgba(255, 255, 255, 0),
                80%,
                rgba(255, 255, 255, 1)
            ),
            url(/images/bg-header-desktop/1200.webp);
    }
}

@media screen and (min-width: 1440px) {
    .bg-header {
        background-image: linear-gradient(
                to bottom,
                rgba(255, 255, 255, 0),
                80%,
                rgba(255, 255, 255, 1)
            ),
            url(/images/bg-header-desktop/1440.webp);
    }
}

/* custom scrollbar */
::-webkit-scrollbar {
    width: 0.5rem;
}
::-webkit-scrollbar-track {
    background-color: hsl(210, 10%, 33%);
    border-radius: 100px;
}

::-webkit-scrollbar-thumb {
    background-color: hsl(171, 66%, 44%);
    border-radius: 100px;
}

